Fixed header right align & invisible text issues

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -35,6 +35,12 @@ body{
   margin-bottom: 2em;
 }
 
+.current-user {
+  color: white;
+  line-height: 40px;
+  display: inline;
+}
+
 .action-panel {
   margin-bottom: 1em;
 }
